[package]
name = "pathfind_demo"
version = "0.1.0"
authors = ["Sergei Fomin <sergio-dna@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustpython-vm = { git = "https://github.com/RustPython/RustPython", default-features = false, features = ["compile-parse"] }
macroquad = { path = "contrib/macroquad" }
quad-gl = { path = "contrib/macroquad/quad-gl" }
